# global-rainfall-pipeline

./: .gitignore  .impeccable.md  README.md  benchmark_annual.csv  benchmark_results.csv  config.yaml  pyproject.toml  pytest_out.txt  requirements.txt  skills-lock.json  verify_err.txt  verify_final.txt  verify_hydrology.py  verify_output.txt
data/: aoi.geojson
frontend/: app.js  index.html  styles.css
src/api/: main.py
src/global_rainfall_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pipeline/: analytics.py  auth.py  cli.py  client.py  config.py  exporter.py  processor.py
src/pipeline/providers/: __init__.py  base.py  chirps.py  gpm.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_chunking.py  test_concurrency_optim.py  test_config.py  test_export.py  test_exporter.py  test_gee_client.py  test_pipeline_concurrency.py  test_processor.py  test_providers.py
